@@ -9,6 +9,7 @@ Bugs fixed
 * Fix line numbers was not shown on warnings in LaTeX and texinfo builders
 * Fix line numbers was not shown on warnings of indecies
 * #2026: Fix LaTeX builder rais error if parsed-literal includes links
+* #2243: Ignore strange docstring types for classes, do not crash
 
 Release 1.3.4 (released Jan 12, 2016)
 =====================================
